data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_767.wast
;; 8. **Test Description**:    Include a `nop` immediately before a `br_table` with a zero index to confirm that no unexpected behavior occurs when `nop` prefaces the simplest valid index scenario.      **Specific Constraint**: Verifies `nop` does not alter zero index handling.      **Edge Case**: Zero index.

(assert_malformed
  (module
    (func (block (nop) (br_table 0 (nop)))))
  "zero index handling")